# openlp

./: .gitignore  .gitlab-ci.yml  OpenLP.spec  README.md  Service 2025-06-27 19-33.osz  claude_desktop_config.json  enable_backup_bypass.py  pyproject.toml  setup.py
.github/workflows/: build.yml  test.yml
documentation/: macos_build_guide.md
openlp/: .version  __main__.py
openlp/core/: app.py  version.py
openlp/core/api/: websockets.py
openlp/core/api/versions/v2/: core.py
openlp/core/common/: settings.py
openlp/core/display/: window.py
openlp/core/lib/: serviceitem.py
openlp/core/ui/: advancedtab.py  mainwindow.py  printservice_templates.py  printserviceform.py  settingsform.py  style.py  webviewprintservice_templates.py  webviewprintserviceform.py
openlp/core/ui/media/: mediacontroller.py  vlcplayer.py
openlp/core/ui/print_templates/: __init__.py  compact.py  minimal.py  modern.py  professional.py
openlp/plugins/images/lib/: mediaitem.py  upgrade.py
openlp/plugins/mcp/: __init__.py  conversion.py  mcpplugin.py  mcptab.py  tools.py  url_utils.py  worker.py
openlp/plugins/media/lib/: mediaitem.py
openlp/plugins/presentations/: presentationplugin.py
openlp/plugins/presentations/lib/: mediaitem.py  presentationcontroller.py
packaging/: .gitignore  README.md
packaging/builders/: OpenLP.spec  builder.py  flatpak-builder.py  macos-builder.py  windows-builder.py
packaging/flatpak/: build.sh  org.openlp.OpenLP.appdata.xml  org.openlp.OpenLP.yml  requirements.txt
packaging/macos/: Info.plist  OpenLP-Background.tiff  OpenLP.icns  config-gitlab.ini  config.ini  config.ini.default  settings.py
packaging/pyinstaller-hooks/: hook-mysql.connector.py  hook-openlp.core.ui.media.py  hook-openlp.plugins.mcp.mcpplugin.py  hook-openlp.plugins.presentations.lib.keynotecontroller.py  hook-openlp.plugins.presentations.lib.maclocontroller.py  hook-openlp.plugins.presentations.presentationplugin.py  hook-openlp.py  hook-pymediainfo.py  hook-ssl.py  hook-websockets.legacy.py  rthook_mcp.py  rthook_ssl.py
packaging/scripts/: backup_georss.sh  build_dev_deb.sh  build_nightly_deb.sh  build_release_deb.sh  deb_version.py  dev_build.sh  fix_bzr.py  natsort.py  nightly_build.sh  notify_build.sh  openlp_tweeter.py  openlp_version.py  openlptweet.py  release_build.sh  upload_build.sh
packaging/tests/: test_version.py
packaging/windows/: OpenLP-base.wxs  appinfo.ini.default  config-gitlab.ini  config.ini  config.ini.default
packaging/windows/OpenLPPortable/App/: Readme.txt
packaging/windows/OpenLPPortable/App/Appinfo/Launcher/: OpenLPPortable.ini
packaging/windows/OpenLPPortable/Other/Source/: Readme.txt
tests/openlp_core/: test_app.py
tests/openlp_core/display/: test_window.py
tests/openlp_core/ui/: test_slidecontroller.py
